[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne"
version = "0.1.0"
description = "DKG-native concept-mining paranet — deterministic Knowledge Assets with SPARQL-queryable RDF store and OriginTrail DKG anchor client"
license = { text = "MIT" }
authors = [{ name = "Christian Knopp" }]
requires-python = ">=3.11"
keywords = ["dkg", "origintrail", "knowledge-graph", "rdf", "sparql", "merkle", "ai-memory"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "rdflib>=7"]
rdf = ["rdflib>=7"]
dkg = ["rdflib>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemosyne"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
